fix: don't auto scroll menu modal if target isn't visible

--- a/src/navigation/Collapsible.css
+++ b/src/navigation/Collapsible.css
@@ -1,11 +1,11 @@
 .collapsible-icon {
   display: none;
 }
-.expanded .collapsible-icon,
-.collapsed .collapsible-icon {
+.collapsible-expanded .collapsible-icon,
+.collapsible-collapsed .collapsible-icon {
   transition: transform 0.3s ease-in-out !important;
   display: initial;
 }
-.collapsed .collapsible-icon {
+.collapsible-collapsed .collapsible-icon {
   transform: rotate(-90deg);
 }
